Fixes right admin sidebar text distortion.
Right admin sidebar has a fixed with of 170px, when adding elements to
this the text get distorted in many cases. English translations are
normally short while most other translations have much longer words.
Title should normally be set to display the full word.

fixes #5780

--- a/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
+++ b/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
@@ -253,9 +253,16 @@ ul {
   border-left: 1px solid $color-border;
   ul.nav {
     margin-top: 63px;
-    li .icon-link span.icon {
-      float: left;
-      margin: 2px 6px 0 0;
+    li {
+      a {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+      .icon-link span.icon {
+        float: left;
+        margin: 2px 6px 0 0;
+      }
     }
     &.nav-stacked > li {
       height: 42px !important;
